--- a/app/src/main/res/layout/detailscardview.xml
+++ b/app/src/main/res/layout/detailscardview.xml
@@ -10,6 +10,7 @@
     android:layout_marginTop="@dimen/size_2dp"
     android:layout_marginEnd="@dimen/size_5dp"
     android:layout_marginBottom="@dimen/size_15dp"
+    app:cardBackgroundColor="@color/white"
     android:background="@drawable/event_detail_cardview_background"
     app:cardCornerRadius="@dimen/_5sdp"
     app:cardElevation="@dimen/_8sdp">
@@ -45,6 +46,7 @@
             android:fontFamily="@font/mulish_regular"
             android:text="@string/quote"
             android:textSize="@dimen/_10sdp"
+            android:textColor="@color/text_gray_color"
             app:layout_constraintBottom_toBottomOf="@+id/event_title_text"
             app:layout_constraintEnd_toStartOf="@+id/amount_text"
             app:layout_constraintHorizontal_bias="1.0"
@@ -89,6 +91,7 @@
             android:paddingTop="@dimen/_2sdp"
             android:text="@string/fork_amp_spoon_catering"
             android:textSize="@dimen/_11sdp"
+            android:textColor="@color/calendar_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -173,6 +176,7 @@
             android:fontFamily="@font/mulish_regular"
             android:text="@string/event_date"
             android:textSize="@dimen/_11sdp"
+            android:textColor="@color/text_gray_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.03"
@@ -187,6 +191,7 @@
             android:fontFamily="@font/mulish_regular"
             android:text="@string/service_date"
             android:textSize="@dimen/_11sdp"
+            android:textColor="@color/text_gray_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.15"
