--- a/app/src/main/res/layout/activity_schedule_managment.xml
+++ b/app/src/main/res/layout/activity_schedule_managment.xml
@@ -24,9 +24,11 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
+                android:background="@color/white"
                 android:layout_height="wrap_content">
 
                 <FrameLayout
+                    android:background="@color/white"
                     android:id="@+id/calendar_fragment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -74,6 +76,7 @@
                     app:layout_constraintVertical_bias="0.0" />
 
                 <FrameLayout
+                    android:background="@color/white"
                     android:id="@+id/timeslots_fragment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
