--- a/app/src/main/res/layout/booked_event_list_recycler_view_item.xml
+++ b/app/src/main/res/layout/booked_event_list_recycler_view_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:paddingBottom="@dimen/size_5dp">
 
     <ImageView
@@ -25,6 +26,7 @@
         android:fontFamily="@font/mulish_medium"
         android:text="@string/aug_26"
         android:textSize="@dimen/_11sdp"
+        android:textColor="@color/text_gray_color"
         app:layout_constraintBottom_toBottomOf="@+id/image_view_12_3am"
         app:layout_constraintStart_toEndOf="@+id/image_view_12_3am"
         app:layout_constraintTop_toTopOf="@+id/image_view_12_3am" />
@@ -37,6 +39,7 @@
         android:fontFamily="@font/mulish_medium"
         android:text="@string/saras_birthday"
         android:textSize="@dimen/_11sdp"
+        android:textColor="@color/text_gray_color"
         app:layout_constraintBottom_toBottomOf="@+id/event_date_display"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/event_date_display"
