--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -119,6 +119,7 @@
                         </LinearLayout>
 
                         <androidx.cardview.widget.CardView
+                          app:cardBackgroundColor="@color/white"
                             android:id="@+id/spinner_action"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -130,6 +131,7 @@
                             app:layout_constraintTop_toTopOf="@id/myEvents_layout">
 
                             <LinearLayout
+                                android:background="@color/white"
                                 android:id="@+id/spinners"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -146,6 +148,7 @@
                                     android:background="@drawable/shapes">
 
                                     <Spinner
+                                        android:popupBackground="@color/white"
                                         android:id="@+id/spn_allServices"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
@@ -164,6 +167,7 @@
                                     android:background="@drawable/shapes">
 
                                     <Spinner
+                                        android:popupBackground="@color/white"
                                         android:id="@+id/spn_Branches"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
@@ -271,20 +275,25 @@
                             android:id="@+id/banner1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/_23sdp"
                             android:layout_marginTop="@dimen/_15sdp"
                             android:src="@drawable/banner"
+                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintLeft_toLeftOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/upcoming_event" />
+                            app:layout_constraintStart_toStartOf="@+id/upcoming_event"
+                            app:layout_constraintTop_toBottomOf="@+id/upcoming_event"
+                            app:layout_constraintVertical_bias="0.0" />
 
                         <ImageView
                             android:id="@+id/banner2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="@dimen/_70sdp"
                             android:src="@drawable/banner_2"
+                            android:layout_marginTop="@dimen/_15sdp"
+                            app:layout_constraintBottom_toBottomOf="@+id/banner1"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/upcoming_event" />
+                            app:layout_constraintHorizontal_bias="0.0"
+                            app:layout_constraintStart_toEndOf="@+id/banner1"
+                            app:layout_constraintTop_toTopOf="@+id/banner1" />
 
                         <ProgressBar
                             android:id="@+id/progress_bar"
