--- a/app/src/main/res/layout/fragment_deseleting_dialog.xml
+++ b/app/src/main/res/layout/fragment_deseleting_dialog.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_10sdp"
         android:padding="@dimen/_13sdp"
+        android:background="@color/white"
         tools:context=".ui.timeslot.deselectingdialog.DeselectingDialogFragment">
 
         <TextView
