--- a/app/src/main/res/layout/fragment_quote_brief.xml
+++ b/app/src/main/res/layout/fragment_quote_brief.xml
@@ -15,6 +15,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".ui.quotebrief.QuoteBriefFragment">
 
         <RelativeLayout
@@ -51,11 +52,12 @@
         </RelativeLayout>
         <androidx.cardview.widget.CardView
             android:id="@+id/card_view"
+            app:cardBackgroundColor="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/linear_catering"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-          android:layout_marginTop="@dimen/size_20dp"
+            android:layout_marginTop="@dimen/size_20dp"
             android:layout_marginLeft="@dimen/size_20dp"
             android:layout_marginRight="@dimen/size_20dp"
             app:cardCornerRadius="@dimen/size_12dp"
