--- a/app/src/main/res/layout/fragment_time_slots.xml
+++ b/app/src/main/res/layout/fragment_time_slots.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         android:layout_marginStart="@dimen/_15sdp"
         android:layout_marginEnd="@dimen/_15sdp"
+        android:background="@color/white"
         android:orientation="vertical"
         tools:context=".ui.timeslot.TimeSlotsFragment">
 
@@ -27,10 +28,12 @@
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
+                app:tabTextColor="@color/text_gray_color"
                 android:layout_height="@dimen/_29sdp"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/_3sdp"
                 android:textSize="@dimen/_13sdp"
+                android:background="@color/white"
                 app:tabBackground="@drawable/tab_selector"
                 app:tabGravity="fill"
                 app:tabIndicatorAnimationMode="elastic"
