--- a/app/src/main/res/layout/quote_brief_dialog.xml
+++ b/app/src/main/res/layout/quote_brief_dialog.xml
@@ -17,6 +17,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/quote_brief_dialog"
             android:layout_width="match_parent"
+            android:background="@color/white"
             android:layout_height="wrap_content">
 
             <RelativeLayout
@@ -90,6 +91,7 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_view"
+                    app:cardBackgroundColor="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_16sdp"
