--- a/app/src/main/res/layout/time_slot_list.xml
+++ b/app/src/main/res/layout/time_slot_list.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/time_slot_list_layout"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -72,6 +73,7 @@
                     android:layout_marginTop="@dimen/_18sdp"
                     android:fontFamily="@font/mulish_medium"
                     android:text="@string/_12am_3am"
+                    android:textColor="@color/text_gray_color"
                     android:textSize="@dimen/_10sdp" />
 
                 <TextView
@@ -81,6 +83,7 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_18sdp"
                     android:fontFamily="@font/mulish_medium"
+                    android:textColor="@color/text_gray_color"
                     android:text="@string/available"
                     android:textSize="@dimen/_10sdp" />
 
@@ -106,6 +109,7 @@
         android:text="@string/no_events_available"
         android:textSize="@dimen/_11sdp"
         android:visibility="gone"
+        android:textColor="@color/text_gray_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
