--- a/app/src/main/res/layout/fragment_quote_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_quote_details_dialog.xml
@@ -175,6 +175,7 @@
                         android:layout_height="@dimen/_35sdp"
                         android:background="@drawable/shape_dailog_curved"
                         android:hint="@string/amount"
+                        android:textColor="@color/black"
                         android:textColorHint="@color/buttoncolor"
                         android:inputType="number"
                         android:paddingStart="@dimen/_6sdp"
