--- a/app/src/main/res/layout/fragment_actions_and_status.xml
+++ b/app/src/main/res/layout/fragment_actions_and_status.xml
@@ -38,6 +38,7 @@
             android:fontFamily="@font/mulish_medium"
             android:hint="@string/_0_pending_items"
             android:textSize="@dimen/_11sdp"
+            android:textColor="@color/text_gray_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -79,6 +80,7 @@
             android:fontFamily="@font/mulish_medium"
             android:hint="@string/_0_status"
             android:textSize="@dimen/_11sdp"
+            android:textColor="@color/text_gray_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -97,6 +99,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tx_pendingstatus"
             app:layout_constraintVertical_bias="0.0" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:indeterminateDrawable="@drawable/custom_progrss_bar"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
