--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -81,7 +81,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_33sdp"
                     android:layout_gravity="center"
                     android:background="@drawable/shapes"
                     android:orientation="vertical">
@@ -99,7 +99,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_33sdp"
                     android:layout_gravity="center"
                     android:layout_marginTop="@dimen/_18sdp"
                     android:background="@drawable/shapes">
