--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -301,7 +301,7 @@
                             android:layout_height="match_parent"
                             android:indeterminateDrawable="@drawable/custom_progrss_bar"
                             android:visibility="gone"
-                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_marginTop="@dimen/_200sdp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
