--- a/app/src/main/res/layout/activity_schedule_managment.xml
+++ b/app/src/main/res/layout/activity_schedule_managment.xml
@@ -13,6 +13,7 @@
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refresh_layout"
+        android:background="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
 
@@ -20,12 +21,13 @@
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/white"
             tools:context=".ui.schedulemanagement.ScheduleManagementActivity">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:background="@color/white"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
                 <FrameLayout
                     android:background="@color/white"
@@ -79,7 +81,7 @@
                     android:background="@color/white"
                     android:id="@+id/timeslots_fragment"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/_23sdp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
