--- a/app/src/main/res/layout/fragment_time_slots.xml
+++ b/app/src/main/res/layout/fragment_time_slots.xml
@@ -47,7 +47,8 @@
         <FrameLayout
             android:id="@+id/expandable_fragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/white"
             android:layout_marginTop="@dimen/_23sdp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
