--- a/app/src/main/res/layout/layout_custome_toast.xml
+++ b/app/src/main/res/layout/layout_custome_toast.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/toast_shape"
     android:id="@+id/linearLayout">
-    <ImageView
-        android:id="@+id/custom_toast_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="logo image"
-        android:src="@drawable/festo_login_logo"/>
-
     <TextView
+       android:layout_gravity="center"
+        android:textSize="@dimen/_11sdp"
+       android:layout_marginBottom="@dimen/_8sdp"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
         android:id="@+id/custom_toast_message"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="To"
-        android:text="Custom Toast" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
