--- a/app/src/main/res/values/custom_styles.xml
+++ b/app/src/main/res/values/custom_styles.xml
@@ -31,6 +31,14 @@
         <item name="android:fontFamily">@font/mulish_semi_bold</item>
     </style>
 
+    // 3103 - Notification Custom Text Appearance
+    <style name="CustomTextAppearanceNotification" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">@dimen/_12sdp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/mulish_semi_bold</item>
+    </style>
+
     <style name="LoginSecurityCode">
         <item name="android:layout_width">@dimen/_40sdp</item>
         <item name="android:layout_height">@dimen/_40sdp</item>
