--- a/app/src/main/res/layout/fragment_old_notification.xml
+++ b/app/src/main/res/layout/fragment_old_notification.xml
@@ -28,5 +28,30 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:listitem="@layout/notification_card_view" />
 
+        <TextView
+            android:id="@+id/no_records_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/no_records_found"
+            android:textSize="@dimen/_13sdp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/old_notification_recycler"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/old_notification_recycler"
+            app:layout_constraintVertical_bias="0.3" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:indeterminateDrawable="@drawable/custom_progrss_bar"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
