--- a/app/src/main/res/layout/notification_card_view.xml
+++ b/app/src/main/res/layout/notification_card_view.xml
@@ -2,13 +2,14 @@
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/notification_card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/size_5dp"
-    android:layout_marginTop="@dimen/size_5dp"
-    android:layout_marginEnd="@dimen/size_5dp"
-    android:layout_marginBottom="@dimen/size_10dp"
+    android:layout_marginStart="@dimen/_2sdp"
+    android:layout_marginTop="@dimen/_2sdp"
+    android:layout_marginEnd="@dimen/_2sdp"
+    android:layout_marginBottom="@dimen/_6sdp"
     android:background="@drawable/event_detail_cardview_background"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="@dimen/_5sdp"
@@ -22,8 +23,9 @@
 
         <TextView
             android:id="@+id/date_time_text"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_10sdp"
             android:fontFamily="@font/mulish_regular"
@@ -33,16 +35,30 @@
             android:textSize="@dimen/_10sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
+
+        <ImageView
+            android:id="@+id/clear_btn"
+            android:layout_width="@dimen/_12sdp"
+            android:layout_height="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            app:layout_constraintBottom_toBottomOf="@+id/date_time_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/date_time_text"
+            app:layout_constraintTop_toTopOf="@+id/date_time_text"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/close_button" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="@dimen/_35sdp"
             android:layout_height="@dimen/_35sdp"
             android:layout_marginStart="@dimen/_8sdp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="@dimen/_22sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,6 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_2sdp"
             android:fontFamily="@font/mulish_medium"
             android:text="@string/bid_won"
             android:textColor="@color/black"
