--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -231,6 +231,52 @@
                             app:layout_constraintStart_toEndOf="@+id/welcome_text"
                             app:layout_constraintTop_toTopOf="@+id/welcome_text" />
 
+                        <TextView
+                            android:id="@+id/notification_count_single"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_marginTop="@dimen/_3sdp"
+                            android:layout_marginEnd="@dimen/_4sdp"
+                            android:paddingEnd="@dimen/_1sdp"
+                            android:textAlignment="textEnd"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/_7sdp"
+                            app:layout_constraintBottom_toBottomOf="@+id/notification_bell"
+                            app:layout_constraintEnd_toEndOf="@+id/notification_bell"
+                            app:layout_constraintStart_toStartOf="@+id/notification_bell"
+                            app:layout_constraintTop_toTopOf="@+id/notification_bell"
+                            tools:ignore="RtlSymmetry" />
+
+                        <TextView
+                            android:id="@+id/notification_count"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_marginTop="@dimen/_3sdp"
+                            android:layout_marginEnd="@dimen/_5sdp"
+                            android:paddingEnd="@dimen/_1sdp"
+                            android:textAlignment="textEnd"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/_7sdp"
+                            app:layout_constraintBottom_toBottomOf="@+id/notification_bell"
+                            app:layout_constraintEnd_toEndOf="@+id/notification_bell"
+                            app:layout_constraintStart_toStartOf="@+id/notification_bell"
+                            app:layout_constraintTop_toTopOf="@+id/notification_bell"
+                            tools:ignore="RtlSymmetry" />
+                        <TextView
+                            android:id="@+id/notification_plus"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_marginTop="@dimen/_2sdp"
+                            android:layout_marginEnd="@dimen/_3sdp"
+                            android:textAlignment="textEnd"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/_6sdp"
+                            app:layout_constraintBottom_toBottomOf="@+id/notification_bell"
+                            app:layout_constraintEnd_toEndOf="@+id/notification_bell"
+                            app:layout_constraintStart_toStartOf="@+id/notification_bell"
+                            app:layout_constraintTop_toTopOf="@+id/notification_bell"
+                            tools:ignore="RtlSymmetry" />
+
                         <androidx.appcompat.widget.Toolbar
                             android:id="@+id/tool_bar"
                             android:layout_width="@dimen/_40sdp"
