--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -104,6 +104,9 @@
         <action
             android:id="@+id/action_dashBoardFragment_to_signInFragment"
             app:destination="@id/signInFragment" />
+        <argument
+            android:name="fromEmailOtp"
+            app:argType="string" />
 
     </fragment>
     <fragment
