--- a/app/src/main/res/values/custom_styles.xml
+++ b/app/src/main/res/values/custom_styles.xml
@@ -6,12 +6,22 @@
     </style>
 
     <style name="FullScreenDialogTheme" parent="Theme.AppCompat.Light.DialogWhenLarge">
-        <item name="android:statusBarColor" tools:targetApi="lollipop">@color/title_background_blue</item>
+        <item name="android:statusBarColor">@color/theme_color</item>
+        // windowLightStatusBar for visible status bar text when status bar color is white
+        <item name="android:windowLightStatusBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowFullscreen">false</item>
         <item name="android:windowAnimationStyle">@style/Animation.Design.BottomSheetDialog</item>
     </style>
 
+    <style name="InternetDialogTheme" parent="Theme.AppCompat.Light.DialogWhenLarge">
+        <item name="android:statusBarColor">@color/white</item>
+        // windowLightStatusBar for visible status bar text when status bar color is white
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowAnimationStyle">@style/Animation.Design.BottomSheetDialog</item>
+    </style>
 
     <style name="FlatButton" parent="Widget.AppCompat.Button.Colored">
         <item name="android:textColor">@color/white</item>
@@ -25,6 +35,7 @@
     </style>
 
     // 2527 - TabLayout Custom Text Appearance
+
     <style name="CustomTextAppearance" parent="TextAppearance.Design.Tab">
         <item name="textAllCaps">false</item>
         <item name="android:textAllCaps">false</item>
@@ -32,6 +43,7 @@
     </style>
 
     // 3103 - Notification Custom Text Appearance
+
     <style name="CustomTextAppearanceNotification" parent="TextAppearance.Design.Tab">
         <item name="textAllCaps">false</item>
         <item name="android:textSize">@dimen/_12sdp</item>
